<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dashboard_nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/dashboard_nav_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/dashboard_nav_history"
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/manual_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/dashboard_nav_bolus"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/dashboard_nav_bolus"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/dashboard_nav_adjustments"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/dashboard_nav_modes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/dashboard_nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/dashboard_nav_settings"
        app:showAsAction="ifRoom" />

</menu>
