<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dashboard_card_surface"
        android:orientation="vertical"
        android:padding="@dimen/dashboard_card_inner_padding">

        <TextView
            android:id="@+id/adjustment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_adjustments"
            android:textAppearance="@style/TextAppearance.AAPS.Dashboard.SectionTitle" />

        <TextView
            android:id="@+id/glycemia_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_section_spacing"
            android:textAppearance="@style/TextAppearance.AAPS.Dashboard.PrimaryLine" />

        <TextView
            android:id="@+id/prediction_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_row_spacing_small"
            android:textAppearance="@style/TextAppearance.AAPS.Dashboard.SecondaryLine" />

        <TextView
            android:id="@+id/iob_activity_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_row_spacing_medium"
            android:textAppearance="@style/TextAppearance.AAPS.Dashboard.SecondaryLine" />

        <TextView
            android:id="@+id/decision_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_row_spacing_small"
            android:textAppearance="@style/TextAppearance.AAPS.Dashboard.SecondaryLine" />

        <TextView
            android:id="@+id/mode_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_row_spacing_medium"
            android:textAppearance="@style/TextAppearance.AAPS.Dashboard.SecondaryLine"
            android:visibility="gone" />

        <TextView
            android:id="@+id/pump_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_row_spacing_medium"
            android:textAppearance="@style/TextAppearance.AAPS.Dashboard.SecondaryLine" />

        <TextView
            android:id="@+id/safety_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_row_spacing_small"
            android:textAppearance="@style/TextAppearance.AAPS.Dashboard.SecondaryLine" />

        <TextView
            android:id="@+id/empty_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_section_spacing"
            android:text="@string/dashboard_no_adjustments"
            android:textAppearance="@style/TextAppearance.AAPS.Dashboard.PrimaryLine" />

        <LinearLayout
            android:id="@+id/adjustment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_section_spacing"
            android:orientation="vertical" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/run_loop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dashboard_section_spacing"
            android:text="@string/dashboard_run_loop"
            style="@style/Widget.AAPS.Dashboard.RunLoopButton" />

    </LinearLayout>
</merge>
